--- a/pos_retail/views/PosComboItem.xml
+++ b/pos_retail/views/PosComboItem.xml
@@ -6,7 +6,7 @@
             <field name="name">pos.combo.item.form</field>
             <field name="model">pos.combo.item</field>
             <field name="arch" type="xml">
-                <form string="Item of Combo">
+                <form string="Producto de Combos">
                     <sheet>
                         <group>
                             <group>
@@ -29,7 +29,7 @@
             <field name="name">pos.combo.item.tree</field>
             <field name="model">pos.combo.item</field>
             <field name="arch" type="xml">
-                <tree string="Item of Combos">
+                <tree string="Producto de Combos">
                     <field name="product_combo_id"/>
                     <field name="product_id"/>
                     <field name="uom_id"/>
@@ -44,7 +44,7 @@
             <field name="name">pos.combo.item.search</field>
             <field name="model">pos.combo.item</field>
             <field name="arch" type="xml">
-                <search string="Item of Combos">
+                <search string="Producto de Combos">
                     <field name="product_combo_id"/>
                     <field name="product_id"/>
                     <field name="uom_id"/>
