--- a/pos_retail/wizards/PosRemoteSession.xml
+++ b/pos_retail/wizards/PosRemoteSession.xml
@@ -3,25 +3,25 @@
      <data>
 
         <record id="pos_remote_session" model="ir.ui.view">
-            <field name="name">Remote sessions</field>
+            <field name="name">Sesiones remotas</field>
             <field name="model">pos.remote.session</field>
             <field name="type">form</field>
             <field name="arch" type="xml">
-                <form string="Remote session">
+                <form string="Sesión remota">
                     <group>
                         <field name="action"/>
                     </group>
-                     <group string="Messages to Sessions">
+                     <group string="Mensajes a las sesiones">
                         <field name="message" nolabel="1"/>
                     </group>
-                    <group string="POS Configs Assigned">
+                    <group string="Configuraciones POS asignadas">
                         <field name="config_ids" nolabel="1"/>
                     </group>
                     <footer>
-                        <button name="send_notifications" class="oe_highlight" string="Send Request"
+                        <button name="send_notifications" class="oe_highlight" string="Enviar petición"
                                 type="object"/>
                         or
-                        <button string="Cancel" class="oe_link" special="cancel"/>
+                        <button string="Cancelar" class="oe_link" special="cancel"/>
                     </footer>
                 </form>
             </field>
