--- a/pos_retail/wizards/RemovePosOrder.xml
+++ b/pos_retail/wizards/RemovePosOrder.xml
@@ -2,23 +2,23 @@
 <odoo>
     <data>
         <record id="remove_pos_order" model="ir.ui.view">
-            <field name="name">Remove orders</field>
+            <field name="name">Eliminar pedidos</field>
             <field name="model">remove.pos.order</field>
             <field name="arch" type="xml">
-                <form string="Delete Order">
+                <form string="Eliminar orden">
                     <group>
                         <field name="pos_security_pin" password="True"/>
                     </group>
                     <footer>
-                        <button name="remove_pos_orders" class="oe_highlight" string="Remove"
+                        <button name="remove_pos_orders" class="oe_highlight" string="Eliminar"
                                 type="object"/>
-                        <button string="Cancel" class="oe_link" special="cancel"/>
+                        <button string="Cancelar" class="oe_link" special="cancel"/>
                     </footer>
                 </form>
             </field>
         </record>
 
-        <act_window name="Delete Orders Selected"
+        <act_window name="Eliminar pedidos seleccionados"
             res_model="remove.pos.order"
             binding_model="pos.order"
             view_mode="form"
