--- a/pos_retail/views/PosIot.xml
+++ b/pos_retail/views/PosIot.xml
@@ -6,7 +6,7 @@
             <field name="name">pos.iot.form</field>
             <field name="model">pos.iot</field>
             <field name="arch" type="xml">
-                <form string="IoT Box">
+                <form string="IoT Dispositivo">
                     <sheet>
                         <div class="oe_title">
                             <h1>
@@ -47,7 +47,7 @@
             <field name="name">pos.iot.tree</field>
             <field name="model">pos.iot</field>
             <field name="arch" type="xml">
-                <tree string="IoT Boxes">
+                <tree string="IoT Dispositivo">
                     <field name="name"/>
                     <field name="proxy"/>
                     <field name="port"/>
@@ -59,7 +59,7 @@
             <field name="name">pos.iot.filter</field>
             <field name="model">pos.iot</field>
             <field name="arch" type="xml">
-                <search string="IoT Boxes">
+                <search string="IoT Dispositivo">
                     <field name="name"/>
                     <field name="proxy"/>
                     <field name="port"/>
@@ -68,7 +68,7 @@
         </record>
 
         <record model="ir.actions.act_window" id="action_pos_iot">
-            <field name="name">IoT Boxes</field>
+            <field name="name">IoT dispositivos</field>
             <field name="res_model">pos.iot</field>
             <field name="view_mode">tree,form</field>
         </record>
