--- a/pos_retail/views/PosServiceCharge.xml
+++ b/pos_retail/views/PosServiceCharge.xml
@@ -6,7 +6,7 @@
             <field name="name">pos.service.charge.tree</field>
             <field name="model">pos.service.charge</field>
             <field name="arch" type="xml">
-                <tree string="Services Charge" editable="bottom">
+                <tree string="Cargo por servicios" editable="bottom">
                     <field name="name"/>
                     <field name="product_id"/>
                     <field name="type"/>
@@ -28,7 +28,7 @@
         </record>
 
         <record model="ir.actions.act_window" id="action_pos_service_charge">
-            <field name="name">Services Charge</field>
+            <field name="name">Cargo por servicios</field>
             <field name="res_model">pos.service.charge</field>
             <field name="view_mode">tree</field>
         </record>
