--- a/pos_retail/views/PosSyncSessionLog.xml
+++ b/pos_retail/views/PosSyncSessionLog.xml
@@ -6,7 +6,7 @@
             <field name="name">pos.sync.session.log.tree</field>
             <field name="model">pos.sync.session.log</field>
             <field name="arch" type="xml">
-                <tree string="Sync Session Logs">
+                <tree string="Sincronizar registros de sesión">
                     <field name="create_date"/>
                     <field name="user_id"/>
                     <field name="send_from_session_id"/>
@@ -43,7 +43,7 @@
         </record>
 
         <record model="ir.actions.act_window" id="action_pos_sync_session_log">
-            <field name="name">Sync Session Logs</field>
+            <field name="name">Sincronizar registros de sesión</field>
             <field name="res_model">pos.sync.session.log</field>
             <field name="view_mode">tree</field>
         </record>
