--- a/pos_retail/views/PosLoyalty.xml
+++ b/pos_retail/views/PosLoyalty.xml
@@ -3,7 +3,7 @@
     <data>
 
         <menuitem id="menu_loyalty"
-                  name="Loyalties"
+                  name="Programa de Lealtad"
                   parent="point_of_sale.menu_point_root"
                   sequence="17"/>
 
@@ -29,7 +29,7 @@
             <field name="name">pos.loyalty.category.tree</field>
             <field name="model">pos.loyalty.category</field>
             <field name="arch" type="xml">
-                <tree string="Loyalties Category">
+                <tree string="Categoría de Lealtad">
                     <field name="name"/>
                     <field name="code"/>
                     <field name="from_point"/>
@@ -66,7 +66,7 @@
             <field name="name">pos.loyalty.form</field>
             <field name="model">pos.loyalty</field>
             <field name="arch" type="xml">
-                <form string="Loyalties">
+                <form string="Programa de Lealtad">
                     <header>
                         <field name="state" widget="statusbar" clickable="true"/>
                         <button name="active_all_pos" string="Active all pos" type="object"
@@ -177,7 +177,7 @@
             <field name="name">pos.loyalty.tree</field>
             <field name="model">pos.loyalty</field>
             <field name="arch" type="xml">
-                <tree string="Loyalties">
+                <tree string="Programa de Lealtad">
                     <field name="name"/>
                 </tree>
             </field>
@@ -187,7 +187,7 @@
             <field name="name">pos.loyalty.filter</field>
             <field name="model">pos.loyalty</field>
             <field name="arch" type="xml">
-                <search string="Loyalties">
+                <search string="Programa de Lealtad">
                     <field name="name"/>
                 </search>
             </field>
@@ -211,7 +211,7 @@
             <field name="model">pos.loyalty.rule</field>
             <field name="priority">20</field>
             <field name="arch" type="xml">
-                <tree string="Loyalties Rule">
+                <tree string="Reglas de Lealtad">
                     <field name="name"/>
                     <field name="loyalty_id"/>
                     <field name="type"/>
