--- a/pos_retail/views/ProductTemplate.xml
+++ b/pos_retail/views/ProductTemplate.xml
@@ -19,27 +19,27 @@
             <field name="inherit_id" ref="product.product_template_search_view"/>
             <field name="arch" type="xml">
                 <filter name="filter_to_sell" position="before">
-                    <filter name="filter_is_combo" string="Is Combo Bundle/Pack"
+                    <filter name="filter_is_combo" string="Es Combo/Paquete"
                             domain="[('is_combo', '=', True)]"/>
-                    <filter name="filter_is_combo_item" string="Is Dynamic Combo Item"
+                    <filter name="filter_is_combo_item" string="Es producto de un combo dinámico"
                             domain="[('is_combo_item', '=', True)]"/>
-                    <filter name="filter_is_credit" string="Is Credit"
+                    <filter name="filter_is_credit" string="Es Crédito"
                             domain="[('is_credit', '=', True)]"/>
-                    <filter name="filter_is_multi_category" string="Is multi Category"
+                    <filter name="filter_is_multi_category" string="Es multi Categoría"
                             domain="[('multi_category', '=', True)]"/>
-                    <filter name="filter_is_multi_uom" string="Is multi Unit"
+                    <filter name="filter_is_multi_uom" string="Es multi Unidad"
                             domain="[('multi_uom', '=', True)]"/>
-                    <filter name="filter_is_multi_variant" string="Is multi Variant"
+                    <filter name="filter_is_multi_variant" string="Es multi variante"
                             domain="[('multi_variant', '=', True)]"/>
-                    <filter name="filter_is_cross_selling" string="Is Cross Selling"
+                    <filter name="filter_is_cross_selling" string="Es Venta Cruzada"
                             domain="[('cross_selling', '=', True)]"/>
-                    <filter name="filter_is_voucher" string="Is Voucher"
+                    <filter name="filter_is_voucher" string="Es Voucher"
                             domain="[('is_voucher', '=', True)]"/>
-                    <filter name="filter_is_sale_extra" string="Is Sale Extra"
+                    <filter name="filter_is_sale_extra" string="Es Venta Extra"
                             domain="[('sale_extra', '=', True)]"/>
-                    <filter name="filter_is_sale_with_package" string="Is Sale with Packaging"
+                    <filter name="filter_is_sale_with_package" string="Es Venta por Paquete"
                             domain="[('sale_with_package', '=', True)]"/>
-                    <filter name="filter_is_price_unit_each_qty" string="Is Price each Qty"
+                    <filter name="filter_is_price_unit_each_qty" string="Es precio por Cantidad"
                             domain="[('price_unit_each_qty', '=', True)]"/>
                 </filter>
             </field>
@@ -52,10 +52,10 @@
             <field name="arch" type="xml">
                 <xpath expr="//header" position="inside">
                     <button name="add_barcode"
-                            string="Add Barcode"
+                            string="Agregar Código de Barras"
                             type="object"
                             groups="point_of_sale.group_pos_manager"
-                            confirm="Auto create new barcode and replace old barcode of product, Are you want to do ?"/>
+                            confirm="Crear automáticamente un nuevo código de barras y reemplazar el viejo código de barras del producto, ¿Desea hacerlo? ?"/>
                 </xpath>
                 <xpath expr="//group[@name='pos']" position="after">
                     <group groups="point_of_sale.group_pos_manager">
@@ -92,16 +92,16 @@
                     <field name="commission_rate"/>
                     <group name="combo" string="Configuración limitada de Combos" attrs="{'invisible': ['|', ('is_combo_item', '=', True), ('is_combo', '=', True)]}">
                         <field name="combo_limit_ids" nolabel="1" colspan="4">
-                            <tree string="Combo Items Limited" editable="1">
+                            <tree string="Productos Limitados en el Combo" editable="1">
                                 <field name="pos_categ_id" domain="[('is_category_combo', '=', True)]"/>
                                 <field name="quantity_limited"/>
                                 <field name="default_product_ids" domain="[('pos_categ_id', '=', pos_categ_id), ('available_in_pos', '=', True), ('is_combo_item', '=', True)]" widget="many2many_tags"/>
                             </tree>
                         </field>
                     </group>
-                    <group name="barcode" string="Multi Barcode">
+                    <group name="barcode" string="Multi Código de Barras">
                         <field name="barcode_ids" nolabel="1" colspan="4">
-                            <tree string="Barcode" editable="1">
+                            <tree string="Código de Barras" editable="1">
                                 <field name="barcode"/>
                                 <field name="quantity"/>
                                 <field name="list_price"/>
@@ -109,24 +109,24 @@
                             </tree>
                         </field>
                     </group>
-                    <group string="Sale Extra" attrs="{'invisible': [('sale_extra', '=', False)]}">
+                    <group string="Precio Extra" attrs="{'invisible': [('sale_extra', '=', False)]}">
                         <field name="sale_extra_item_ids" nolabel="1" colspan="4"
                                attrs="{'required': [('sale_extra', '=', True)]}">
-                            <tree string="Sale extra items" editable="1">
+                            <tree string="Productos con precio Extra" editable="1">
                                 <field name="product_id"/>
                                 <field name="quantity"/>
                                 <field name="list_price"/>
                             </tree>
                         </field>
                     </group>
-                    <group string="Combo Bundle/Pack Setting" attrs="{'invisible': [('is_combo', '=', False)]}"
+                    <group string="Combo/Paquete Configuración" attrs="{'invisible': [('is_combo', '=', False)]}"
                            groups="point_of_sale.group_pos_manager">
                         <group invisible="1">
                             <field name="combo_limit" required="1"/>
                         </group>
                         <field name="pos_combo_item_ids" nolabel="1" colspan="4"
                                attrs="{'required': [('is_combo', '=', True)]}">
-                            <tree string="Combo Bundle/Pack Setting" editable="1">
+                            <tree string="Combo/Paquete Configuración" editable="1">
                                 <field name="required" invisible="1"/>
                                 <field name="product_id" options="{'no_create_edit': True}"/>
                                 <field name="quantity"/>
@@ -137,16 +137,16 @@
                             </tree>
                         </field>
                     </group>
-                    <group string="Price of Combo Item" attrs="{'invisible': [('is_combo_item', '=', False)]}"
+                    <group string="Precio del artículo en Combo" attrs="{'invisible': [('is_combo_item', '=', False)]}"
                            groups="point_of_sale.group_pos_manager">
                         <group>
                             <field name="combo_price" attrs="{'required': [('is_combo_item', '=', True)]}"/>
                         </group>
                     </group>
-                    <group string="Cross Selling" attrs="{'invisible': [('cross_selling', '=', False)]}"
+                    <group string="Venta cruzada" attrs="{'invisible': [('cross_selling', '=', False)]}"
                            groups="point_of_sale.group_pos_manager">
                         <field name="cross_ids" nolabel="1" colspan="4">
-                            <tree string="Cross Items" editable="1">
+                            <tree string="Artículos cruzadosArtículos cruzados" editable="1">
                                 <field name="product_id"/>
                                 <field name="list_price"/>
                                 <field name="quantity"/>
@@ -155,11 +155,11 @@
                             </tree>
                         </field>
                     </group>
-                    <group string="Multi Variant" attrs="{'invisible': [('multi_variant', '=', False)]}"
+                    <group string="Multi Variantes" attrs="{'invisible': [('multi_variant', '=', False)]}"
                            groups="point_of_sale.group_pos_manager">
                         <field name="pos_variant_ids" groups="point_of_sale.group_pos_manager" nolabel="1" colspan="4"
                                attrs="{'required': [('multi_variant', '=', True)], 'invisible': [('multi_variant', '!=', True)]}">
-                            <tree string="Variants" editable="1">
+                            <tree string="Variantes" editable="1">
                                 <field name="attribute_id"/>
                                 <field name="value_id" domain="[('attribute_id', '=', attribute_id)]"/>
                                 <field name="quantity"/>
@@ -171,10 +171,10 @@
                         </field>
                     </group>
                     <group attrs="{'invisible': [('price_unit_each_qty', '=', False)]}"
-                           string="List Price by Quantities"
+                           string="Precio de lista por cantidades"
                            groups="point_of_sale.group_pos_manager">
                         <field name="product_price_quantity_ids" nolabel="1" colspan="4">
-                            <tree string="Unit of Measure and price" editable="1">
+                            <tree string="Unidad de medida y precio" editable="1">
                                 <field name="quantity"/>
                                 <field name="price_unit"/>
                             </tree>
@@ -182,10 +182,10 @@
                     </group>
                     <group attrs="{'invisible': [('sale_with_package', '=', False)]}"
                             name="pack_quantities"
-                            string="Pack Quantities"
+                            string="Cantidades en Paquete"
                             groups="point_of_sale.group_pos_manager">
                         <field name="pack_ids" nolabel="1" colspan="4">
-                            <tree string="Pack Quantities" editable="1">
+                            <tree string="Cantidades en Paquete" editable="1">
                                 <field name="quantity"/>
                                 <field name="public_price"/>
                                 <field name="barcode"/>
@@ -194,18 +194,18 @@
                         </field>
                     </group>
                     <group name="pos_multi_category"
-                           string="POS multi Category"
+                           string="POS multi Categoría"
                            attrs="{'invisible': [('multi_category', '=', False)]}"
                            groups="point_of_sale.group_pos_manager">
                         <field name="pos_categ_ids" colspan="4" nolabel="1"
                                attrs="{'required': [('multi_category', '=', True)]}"/>
                     </group>
                     <group name="pos_multi_unit_of_measure"
-                           string="Multi Unit"
+                           string="Multi Unidad"
                            attrs="{'invisible': [('multi_uom', '=', False)]}"
                            groups="point_of_sale.group_pos_manager">
                         <field name="price_uom_ids" colspan="4" nolabel="1">
-                            <tree string="Unit of measure and price" editable="1">
+                            <tree string="Unidad de medida y precio" editable="1">
                                 <field name="uom_id" domain="[('id','in', parent.uom_ids)]"/>
                                 <field name="price"/>
                             </tree>
