--- a/pos_retail/static/src/css/Primary.scss
+++ b/pos_retail/static/src/css/Primary.scss
@@ -6,7 +6,7 @@ $font_family_pos: "Poppins";
 $background_pos_image: url(/pos_retail/static/src/imgs/pos_home.svg), linear-gradient(to right bottom, #ffffff, #eeeeee);
 
 $background: #d4d4d5;
-$primary_color: #FF5722;
+$primary_color: ##3380FF;
 $secondary_color: #6EC89B;
 $three_color: #607D8B;
 $border_color : #d4d4d5;
